# cb-text-analytics

./: .gitignore  .uv-cheatsheet.md  GETTING_STARTED.md  README.md  pyproject.toml  requirements.txt
src/: quick_analysis.py
tutorials/: 01_loading_and_exploring_data.ipynb  02_text_analysis_basics.ipynb  03_sentiment_analysis.ipynb  03_topic_modeling_and_patterns.ipynb  04_advanced_visualizations.ipynb
